--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@
 BOT_TOKEN=your_bot_token_here
 ADMIN_ID=your_telegram_id_here
 
-# Supabase PostgreSQL Configuration
-SUPABASE_DB_HOST=db.gnafrakkfwxyylslxxpu.supabase.co
+# Supabase PostgreSQL Configuration (Use Connection Pooler for Render/IPv4)
+SUPABASE_DB_HOST=your_pooler_host_here.pooler.supabase.com
 SUPABASE_DB_NAME=postgres
 SUPABASE_DB_PASSWORD=your_db_password_here
-SUPABASE_DB_PORT=5432
+SUPABASE_DB_PORT=6543
 SUPABASE_DB_USER=postgres.gnafrakkfwxyylslxxpu
 
 # Supabase URL/KEY (Optional, for future use)
